--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -1,38 +1,101 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap');
+
+body {
+font-family: 'Montserrat', sans-serif;
+}
+
+img {
+  width: 400px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: darkseagreen;
+  color: white;
+  height: 50px;
+}
+
+.category-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top: 30px;
+
+}
+
+.nav-link {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 2pt;
+}
+
+h1 {
+  text-align: center;
+  font-size:36pt;
+
+}
+
+
+.category-list {
+  list-style: none;
+  text-transform: uppercase;
+  background-color: darkseagreen;
+  padding: 20px;
+  color: white;
+  text-decoration: none;
+}
+
+a:before, a:after, a:active {
+  text-decoration: none;
+}
+
+
+.category-card {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.item-list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top: 30px;
+}
+
+
+.list-item {
+  list-style: none;
+  text-transform: uppercase;
+  background-color: darkseagreen;
+  padding: 10px;
   color: white;
+  text-decoration: none;
+  margin: 20px;
+  width: 250px;
 }
 
-.App-link {
-  color: #61dafb;
+.list-img {
+  width: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  margin: 5px 5px 0px 5px;
+}
+
+p {
+  margin: 5px 5px 0px 5px;
+  font-size: 20px;
+}
+
+.price-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+button {
+
 }
