--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -2,6 +2,7 @@
 
 body {
 font-family: 'Montserrat', sans-serif;
+margin: 0 auto;
 }
 
 img {
@@ -10,12 +11,32 @@ img {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  gap: 30px;
   align-items: center;
-  background-color: darkseagreen;
   color: white;
   height: 50px;
+  padding: 10px 60px 10px 0px;
+  
 }
+
+.nav-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgb(8, 194, 211);
+  border-top: 1px solid rgb(8, 194, 211);
+  background-color: white;
+}
+
+.hero-btn {
+  background-color: rgb(8, 194, 211);
+  border: none;
+  padding: 15px 40px;
+  color: white;
+}
+
 
 .category-menu {
   display: flex;
@@ -28,50 +49,75 @@ nav {
 .nav-link {
   text-transform: uppercase;
   text-decoration: none;
-  color: white;
-  font-weight: 700;
+  color: gray;
+  font-weight: 200;
   letter-spacing: 2pt;
+  font-size: 20px;
 }
 
 h1 {
   text-align: center;
-  font-size:36pt;
+  font-size:30pt;
+margin: 20px;
+color: rgb(8, 194, 211);
+font-weight: 200;
 
 }
 
+header {
+height: 40vh;
+background-image: url('./images/hero-image.jpeg');
+background-size: cover;
+}
+
+.hero-box {
+  width: 300px;
+  height: 300px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+justify-content: center;
+position: absolute;
+left: 100px;
+top: 150px;
+}
 
 .category-list {
   list-style: none;
   text-transform: uppercase;
-  background-color: darkseagreen;
+  background-color: rgb(8, 194, 211);
   padding: 20px;
   color: white;
   text-decoration: none;
+  margin-top: -10px;
+
 }
 
-a:before, a:after, a:active {
+a, a:before, a:after, a:active {
   text-decoration: none;
 }
 
 
 .category-card {
   text-align: center;
+  margin: 20px;
 }
 
 .item-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding-top: 30px;
+  padding-top: 60px;
+  margin: 40px;
 }
 
 
 .list-item {
   list-style: none;
-  text-transform: uppercase;
-  background-color: darkseagreen;
+  text-transform: none;
   padding: 10px;
-  color: white;
+  color: grey;
   text-decoration: none;
   margin: 20px;
   width: 250px;
@@ -83,6 +129,9 @@ a:before, a:after, a:active {
 
 h2 {
   margin: 5px 5px 0px 5px;
+  font-weight: 200;
+  font-size: 20px;
+  padding-bottom: 10px;
 }
 
 p {
@@ -96,6 +145,7 @@ p {
   justify-content: space-between;
 }
 
-button {
-
+.react-icon {
+  color:rgb(8, 194, 211);
+  margin-right: 10px;
 }
