--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -108,7 +108,7 @@ a, a:before, a:after, a:active {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding-top: 60px;
+  padding-top: 0px;
   margin: 40px;
 }
 
@@ -132,6 +132,15 @@ h2 {
   font-weight: 200;
   font-size: 20px;
   padding-bottom: 10px;
+
+}
+
+h3{ 
+  font-weight: 200;
+  font-size: 28px;
+  color: rgb(8, 194, 211);
+  margin-left: 80px;
+  padding-top: 30px;
 }
 
 p {
