--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -163,3 +163,42 @@ p {
   background-color: white;
   border: none;
 }
+
+h5 {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 26px;
+  }
+
+  .nav-bar {
+    flex-direction: column;
+  }
+  
+
+  nav {
+    justify-content: center;
+    padding: 0px;
+  }
+
+  .nav-link {
+    font-size: 16px;
+  }
+
+  
+  .hero-box {
+    width: 250px;
+    height: 250px;
+  justify-content: center;
+  position:unset;
+  }
+ 
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
