--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 
 body {
 font-family: 'Montserrat', sans-serif;
@@ -61,7 +62,17 @@ h1 {
 margin: 20px;
 color: rgb(8, 194, 211);
 font-weight: 200;
+font-family: 'Berkshire Swash', cursive;
+}
 
+
+.hero-header {
+  text-align: center;
+  font-size:30pt;
+margin: 20px;
+color: rgb(8, 194, 211);
+font-weight: 200;
+color: gray;
 }
 
 header {
@@ -200,5 +211,10 @@ h5 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .hero-header {
+    margin: 10px;
+    font-size: 28pt;
   }
 }
