--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -217,4 +217,10 @@ h5 {
     margin: 10px;
     font-size: 28pt;
   }
+
+  h3 {
+    padding: 0;
+    margin: 30px 30px 0px 30px;
+    text-align: center;
+  }
 }
