--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -121,6 +121,7 @@ a, a:before, a:after, a:active {
   justify-content: space-around;
   padding-top: 0px;
   margin: 40px;
+  height: auto;
 }
 
 
@@ -192,7 +193,38 @@ margin: 0;
 font-size: 26pt;
 }
 
+footer {
+  height: 60px;
+  background-color: rgb(8, 194, 211);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 40px ;
+}
 
+.footer-icon {
+  color: white;
+}
+
+.footer-icon-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.footer-links {
+  list-style: none;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.footer-link {
+  list-style: none;
+  color: white;
+}
 
 
 @media only screen and (max-width: 600px) {
@@ -238,5 +270,15 @@ font-size: 26pt;
     padding: 0;
     margin: 30px 30px 0px 30px;
     text-align: center;
+  }
+
+  footer {
+    flex-direction: column-reverse;
+    height: max-content;
+    padding-top: 20px;
+  }
+
+  .footer-links {
+    padding: 20px 0px;
   }
 }
