--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -123,7 +123,7 @@ a, a:before, a:after, a:active {
   flex-wrap: wrap;
   justify-content: space-around;
   padding-top: 0px;
-  margin: 10px 40px;
+  margin: 10px 10px 80px 10px;
 }
 
 
@@ -196,8 +196,8 @@ h5 {
 }
 
 .basket-title {
-margin: 0;
-font-size: 26pt;
+margin: 20px;
+font-size: 22pt;
 }
 
 footer {
