--- a/our-marketplace/src/App.css
+++ b/our-marketplace/src/App.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 
+
+
 body {
 font-family: 'Montserrat', sans-serif;
 margin: 0 auto;
-height: 100%;
+
 }
 
 img {
@@ -129,6 +131,10 @@ top: 150px;
 
 }
 
+main {
+  min-height: 50vh;
+}
+
 a, a:before, a:after, a:active {
   text-decoration: none;
 }
@@ -229,7 +235,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 10px 30px 10px 40px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
 
@@ -284,9 +290,16 @@ input {
   border: none;
   background-color: rgb(236, 236, 236);
   border-radius: 0px;
-  width: 400px;
+  width: 100%;
   height: 40px;
   margin-top: 10px;
+}
+
+form {
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+
 }
 
 label{
@@ -294,9 +307,13 @@ label{
 }
 
 .sign-up-btns {
+  width: 350px;
   display: flex;
-  flex-direction: column;
-  justify-items: space-between;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -359,5 +376,9 @@ label{
 
   .footer-links {
 display: none;
+  }
+
+  input {
+    font-size: 16px;
   }
 }
